llm-d-inference-scheduler/sim-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sim-route
  namespace: vllm-simulator
spec:
  parentRefs:
    - name: inference-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway-system
  rules:
    - matches:
        - headers:
            - name: x-model-name
              value: simulator
      backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: sim-pool
          port: 8000
